--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "# Clustering Basketball Shooting Data: Finding Patterns in How Players Score  \n",
     "\n",
-    "Have you ever wondered just *how* much Steph Curry loves the three-ball? Or if maybe, just maybe, Brandon Ingram should ease up on those contested mid-range jumpers? What about DeMar DeRozan, the king of the mid-range—how different is his shot profile from, say, Damian Lillard, who launches bombs from deep?  \n",
+    "Have you ever wondered just *how* much Steph Curry loves the three-ball? What about SGA, king of the mid-range — how different is his shot profile from, say, Zion Williamson, who lives in the paint?  \n",
     "\n",
     "NBA players have distinct shooting tendencies, but these tendencies aren’t always obvious just by looking at raw numbers. Sure, we can check a player’s shooting percentages from different distances, but how do we **see the bigger picture** 👀 ? How do we group players with similar scoring styles?  \n",
     "\n",
-    "That’s where **clustering** comes in. Using a technique called Principal Component Analysis (PCA), we can simplify complex shooting data and uncover hidden patterns in how players score. In this tutorial, we’ll take real NBA shooting stats and break them down into meaningful groups—helping us answer questions like:  \n",
+    "This is where **clustering** comes in. Using a technique called Principal Component Analysis (PCA), we can simplify complex shooting data and uncover hidden patterns in how players score. In this tutorial, we’ll take real NBA shooting stats and break them down into meaningful groups—helping us answer questions like:  \n",
     "- Who has a similar shot profile to Steph?  \n",
     "- Which players rely the most on mid-range jumpers?  \n",
     "- Are there clear groups of scorers based on shot selection?  \n",
@@ -20,15 +20,18 @@
     "Let’s dive in!\n",
     "\n",
     "## Table of Contents\n",
-    "1. [What is Clustering](#section1)\n",
-    "2. [Getting the Data and Setting Up](#section2)\n"
+    "1. [What is Clustering? Why Does it Matter?](#section-1-what-is-clustering-and-why-does-it-matter)\n",
+    "2. [Getting the Data and Setting up our Notebook](#section-2-getting-the-data-and-setting-up-the-notebook)\n",
+    "3. [Data Cleaning and Feature Selection](#section-3-data-cleaning-and-feature-selection)\n",
+    "4. [Standardization and Dimensionality Reduction using PCA](#section-4-standardization-and-dimensionality-reduction)\n",
+    "5. [Summary and Next Steps](#summary)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Section 1: What is Clustering & Why Does It Matter? <a name=\"section1\"></a>\n",
+    "## Section 1: What is Clustering and Why Does it Matter?\n",
     "\n",
     "Basketball is a game of styles. Some players live at the rim, others thrive beyond the arc, and then there's everything in between. But how do we **group players** based on their shot selection?  \n",
     "\n",
@@ -58,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Section 2. Getting the Data & Setting Up the Notebook  \n",
+    "## Section 2: Getting the Data and Setting Up the Notebook  \n",
     "\n",
     "Before we start analyzing NBA players' shooting tendencies, we need to get our hands on some real data. We'll be using an open-source dataset from Kaggle, which compiles NBA stats from [Basketball Reference](https://www.basketball-reference.com).\n",
     "\n",
@@ -415,23 +418,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Section 3: Data Cleaning & Feature Selection  \n",
+    "## Section 3: Data Cleaning and Feature Selection  \n",
     "\n",
     "Now that we’ve loaded the data, it’s time to clean it up and extract the information we need. Since we’re clustering players based on their shot profiles, we need to make sure our dataset is structured properly.  \n",
     "\n",
     "#### 🧹 Step 1: Filtering for the Modern NBA  \n",
     "The dataset includes **every season since 1947**, but the game has changed a lot since then. For example, the three-point line was introduced in 1979/80, and the league has seen a surge in three-point attempts in recent years. \n",
     "\n",
-    "We’ll filter the data to include only seasons from **2012/13 to 2023/24**, ensuring we’re clustering players who played under similar conditions.  \n"
+    "We’ll filter the data to include only seasons from **2018/19 to 2023/24** to focus on the modern NBA.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert season to numeric and filter out seasons with less than 40 games\n",
+    "# Convert season to numeric and filter out seasons with little playing time\n",
     "df_shooting = df[df['season'].between(2019, 2024)]\n",
     "df_shooting = df_shooting[df_shooting['g'] > 35]"
    ]
@@ -593,7 +596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Section 4: Standardization & Dimensionality Reduction! 🎯\n",
+    "## Section 4: Standardization and Dimensionality Reduction\n",
     "\n",
     "Now that we have cleaned up and enhanced our dataset, we can move on to standardizing the data and applying Principal Component Analysis (PCA).\n",
     "\n",
@@ -772,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
